force-app/main/default/objects/Proposal_Document__c/Proposal_Document__c.object-meta.xml
<CustomObject>
    <label>Proposal Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>