force-app/main/default/objects/Proposal_Document__c/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if attachments under this record should be archived.</description>
    <inlineHelpText>Indicate if attachments under this record should be archived.</inlineHelpText>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>