force-app/main/default/objects/Proposal_Document__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Project Documents</relationshipLabel>
    <relationshipName>Project_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>