force-app/main/default/objects/Proposal_Document__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of document</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>