force-app/main/default/objects/Proposal_Document__c/fields/Document_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload_Date__c</fullName>
    <description>Date Document was uploaded in Powerclerk</description>
    <label>Document Upload Date</label>
    <type>DateTime</type>
</CustomField>