force-app/main/default/objects/Proposal_Document__c/fields/Primary_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for Customer Community Login license POC</description>
    <label>Primary Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Documents</relationshipLabel>
    <relationshipName>Project_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>