force-app/main/default/objects/Proposal_Document__c/fields/Program_Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Area_Type__c</fullName>
    <label>Program Area Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>