force-app/main/default/objects/Proposal_Document__c/fields/Source_Project_Document_for_Change_Mod__c.field-meta.xml
<CustomField>
    <fullName>Source_Project_Document_for_Change_Mod__c</fullName>
    <description>Change Mod specific field. This will ensure Project Document navigation.</description>
    <externalId>true</externalId>
    <label>Source Project Document for Change Mod</label>
    <length>18</length>
    <type>Text</type>
</CustomField>